# discord-image-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  test.env.example
dib/: __main__.py  common.py  discord.py  downloader.py  utils.py
tests/: test_main.py  test_webhook.py
